# qplot

./: .gitignore  AUTHOR  CMakeLists.txt  ChangeLog_ru.utf8  INSTALL.md  README  README.md  _clean.sh  _make.sh  qplot-qt5.pro  qplot-qwt.pro  qplot-win.pro  qplot.pro
clib/: str.c
doc/: .qplotrc.ini  ChangeLog.utf8  ChangeLog_ru.utf8  HELP-ru.utf8  INSTALL_ru.utf8  README-ru.utf8  TODO-ru.utf8  TODO.utf8  example.plot.ini  example.qplot.ini
libs/: qtmisc.h
qwt-src/: CMakeLists.txt  qwt-src.list
src/: CMakeLists.txt  core.cpp  core.h  main.cpp  plot_area.cpp  plot_area.h  plot_win.cpp  plot_win.h  qplot.cpp  qplot.h  qplot_tbl.cpp  qplot_tbl.h
test/: _clean.sh  _clean_all.sh  _start.sh  mkdata.cpp  mkdata.pro  test.qplot.ini  test1.qplot.ini  test2.qplot.ini
test/binary/: _clean.sh  _make.sh  _start.sh  binary.qplot.ini  mkdatabin.cpp  mkdatabin.pro
ui/: plot_win.ui
